add maven compiler args